--- a/1/assignment1.ipynb
+++ b/1/assignment1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +101,12 @@
     "    # write the position of the robot in txt file\n",
     "    file = open(\"observations.txt\", \"w\")\n",
     "    file.write(\n",
-    "        \"Robot position: \"\n",
-    "        + \"x: \"\n",
-    "        + str(x_robot)\n",
-    "        + \" y: \"\n",
-    "        + str(y_robot)\n",
-    "        + \" theta: \"\n",
-    "        + str(theta_robot)\n",
+    "        f\"Robot position: x= {str(x_robot)} , y= {str(y_robot)} , theta= {str(theta_robot)}\"\n",
     "    )\n",
     "\n",
     "    # write meaeurements in txt file\n",
     "    file.write(\"\\nObservations: \")\n",
-    "    file.write(\"\\nAngle \\t Distance \\t Endpoint\")\n",
+    "    file.write(\"\\nAngle \\t Distance(cm) \\t Endpoint\")\n",
     "\n",
     "    # create array to save the distance at each angle\n",
     "    distances = np.zeros((SENSOR_ANGLE // SENSOR_STEP) + 1)\n",
@@ -165,28 +159,30 @@
     "        # calculate the distance between the robot and the endpoint\n",
     "        distance = norm(np.array((x_robot, y_robot)) - np.array(endpoint))\n",
     "        # save the distance in the array\n",
-    "        distances[ind] = min(1200, distance * 4)\n",
+    "        distances[ind] = min(MAX_RANGE, distance * 4)\n",
     "        endpoints.append(endpoint)\n",
     "\n",
     "        # write meaeurements in txt file\n",
-    "        file.write(f\"\\n {str(angle)} \\t {str(distance)} \\t {str(endpoint)}\")\n",
+    "        file.write(f\"\\n {str(angle)} \\t {str(distances[ind])} \\t {str(endpoint)}\")\n",
     "    # save the image\n",
     "    cv2.imwrite(\"req1.jpg\", img)\n",
     "    # close the file\n",
     "    file.close()\n",
     "    # show the image\n",
-    "    cv2.imshow(\"image\", img)\n",
-    "    cv2.waitKey(0)\n",
-    "    cv2.destroyAllWindows()"
+    "    # cv2.imshow(\"image\", img)\n",
+    "    # cv2.waitKey(0)\n",
+    "    # cv2.destroyAllWindows()\n",
+    "\n",
+    "    return distances, np.array(endpoints)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "req1(\"./Map.jpg\", 350, 185, 200)"
+    "distances, endpoints = req1(\"./Map.jpg\", 350, 185, 200)"
    ]
   },
   {
@@ -197,8 +193,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def req2(image_path: str, actual_measures: List[float], variance: float = 1):\n",
+    "    \"\"\"\n",
+    "    actual_measures: List[float]: Actual measures of the robot\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "req2(\"./Map.jpg\", distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
