--- a/1/assignment1.ipynb
+++ b/1/assignment1.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Peter\\anaconda3\\Lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "from typing import Tuple, List\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +76,22 @@
     "    \"\"\"\n",
     "    x2 = int(x + r * cos(theta * DEG2RAD))\n",
     "    y2 = int(y + r * sin(theta * DEG2RAD))\n",
+    "\n",
+    "    return (x2, y2)\n",
+    "\n",
+    "\n",
+    "def convert_from_raduis_to_cartesian_end_point(\n",
+    "    x: int, y: int, r: float, theta: float\n",
+    "\n",
+    ") -> Tuple[float, float]:\n",
+    "    \"\"\"\n",
+    "\n",
+    "    Convert from raduis and theta to cartesian coordinates\n",
+    "    \"\"\"\n",
+    "\n",
+    "    x2 = round(x + r * cos(theta * DEG2RAD))\n",
+    "\n",
+    "    y2 = round(y + r * sin(theta * DEG2RAD))\n",
     "\n",
     "    return (x2, y2)"
    ]
@@ -80,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +117,8 @@
     "    # draw the robot direction\n",
     "    cv2.line(\n",
     "        img,\n",
-    "        (350, 185),\n",
-    "        convert_from_raduis_to_cartesian(350, 185, 10, theta_robot),\n",
+    "        (x_robot, y_robot),\n",
+    "        convert_from_raduis_to_cartesian(x_robot, y_robot, 10, theta_robot),\n",
     "        BLUE,\n",
     "        thickness=2,\n",
     "    )\n",
@@ -173,16 +198,16 @@
     "    # cv2.waitKey(0)\n",
     "    # cv2.destroyAllWindows()\n",
     "\n",
-    "    return distances, np.array(endpoints)"
+    "    # return distances, np.array(endpoints)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances, endpoints = req1(\"./Map.jpg\", 350, 185, 200)"
+    "req1(\"./Map.jpg\", 350, 185, 200)"
    ]
   },
   {
@@ -194,23 +219,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def req2(image_path: str, actual_measures: List[float], variance: float = 1):\n",
+    "def req2(image_path: str, sensor_range: float, variance: float = 1):\n",
     "    \"\"\"\n",
-    "    actual_measures: List[float]: Actual measures of the robot\n",
-    "    \"\"\""
+    "    snesor_range: the maximum distance that the sensor can measure\n",
+    "    variance: the variance of the gaussian distribution\n",
+    "    \"\"\"\n",
+    "    # read the map image and convert it to gray scale\n",
+    "    map = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    # do binary thresholding\n",
+    "    binary_map = cv2.threshold(map, 127, 255, cv2.THRESH_BINARY)[1]\n",
+    "\n",
+    "    # for each pixel in the map calculate the distance to the nearest obstacle\n",
+    "    \"\"\"\n",
+    "    The distanceTransform function in OpenCV is an image processing function that calculates\n",
+    "    the Euclidean distance between each non-zero pixel in an image and the nearest zero pixel\n",
+    "    \"\"\"\n",
+    "    distances_to_nearest_obst = cv2.distanceTransform(binary_map, cv2.DIST_L2, 0)\n",
+    "    distances_to_nearest_obst = np.array(distances_to_nearest_obst)\n",
+    "    # calculate the likelihood field using gaussian distribution with mean = 0 and variance = variance\n",
+    "    likelihood_field = (\n",
+    "        1\n",
+    "        / (np.sqrt(2 * np.pi * variance))\n",
+    "        * np.exp(-(distances_to_nearest_obst**2) / (2 * variance))\n",
+    "    ) + 0.0001\n",
+    "    # max likelihood\n",
+    "    max_likelihood = np.max(likelihood_field)\n",
+    "    # # normalize the likelihood field\n",
+    "    likelihood_field = likelihood_field / max_likelihood\n",
+    "    # output the likelihood field\n",
+    "    cv2.imwrite(f\"likelihood_field for var={variance}.jpg\", likelihood_field * 255)\n",
+    "\n",
+    "    # probability map\n",
+    "    probability_map = np.zeros(map.shape)\n",
+    "    max_probability = 0\n",
+    "    index_max_probability = (0, 0)\n",
+    "    # loop over the likelihood field\n",
+    "    for y in range(likelihood_field.shape[0]):\n",
+    "        for x in range(likelihood_field.shape[1]):\n",
+    "            # array to save the probability at each angle\n",
+    "            probabilities = np.zeros(361)\n",
+    "            for angle in range(361):\n",
+    "                # get the endpoint of the ray\n",
+    "                x_max, y_max = convert_from_raduis_to_cartesian_end_point(\n",
+    "                    x, y, sensor_range / 4, angle\n",
+    "                )\n",
+    "                # if the endpoint is out of the map, then give it a very low probability ( 0.0001 )\n",
+    "                if (\n",
+    "                    x_max < 0\n",
+    "                    or x_max >= likelihood_field.shape[1]\n",
+    "                    or y_max < 0\n",
+    "                    or y_max >= likelihood_field.shape[0]\n",
+    "                ):\n",
+    "                    probability = 0.0001\n",
+    "                else:\n",
+    "                    # get the probability from the likelihood field\n",
+    "                    probability = likelihood_field[y_max, x_max]\n",
+    "                # save the probability in the array\n",
+    "                probabilities[angle] = probability\n",
+    "            # the probability of the pixel is the maximum probability at all angles\n",
+    "            probability_map[y, x] = np.max(probabilities)\n",
+    "    # save the probability map\n",
+    "    cv2.imwrite(\n",
+    "        f\"probability_map sensor_range={sensor_range} var={variance}.jpg\",\n",
+    "        probability_map * 255,\n",
+    "    )\n",
+    "    # get the point with the highest probability with reverse order\n",
+    "    index_max_probability = np.unravel_index(\n",
+    "        np.argmax(probability_map), probability_map.shape\n",
+    "    )\n",
+    "    max_probability = probability_map[index_max_probability]\n",
+    "    # print the value of the point with the highest probability\n",
+    "    print(f\"The highest probability is: {max_probability} at {index_max_probability}\")\n",
+    "\n",
+    "    # draw the point with the highest probability in the map\n",
+    "    # max_point_map = np.zeros(map.shape)\n",
+    "    # max_point_map[index_max_probability] = 1\n",
+    "    # cv2.imwrite(\n",
+    "    #     f\"max_point_map sensor_range={sensor_range} var={variance}.jpg\",\n",
+    "    #     max_point_map * 255,\n",
+    "    # )\n",
+    "\n",
+    "    # show the image\n",
+    "    # cv2.imshow(f\"likelihood_field for var={variance}\", likelihood_field * 255)\n",
+    "    # cv2.imshow(f\"probability_map sensor_range={sensor_range} var={variance}\", probability_map * 255)\n",
+    "    # cv2.imshow(f\"max_point_map sensor_range={sensor_range} var={variance}\", max_point_map * 255)\n",
+    "\n",
+    "    # cv2.waitKey(0)\n",
+    "    # cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n",
+      "The highest probability is: 1.0 at (0, 0)\n"
+     ]
+    }
+   ],
    "source": [
-    "req2(\"./Map.jpg\", distances)"
+    "for sensor_range_meter in [0.1,0.5,1,2,3,4]:\n",
+    "    for std in [1,5,10,20]:\n",
+    "        req2(\"./Map.jpg\", sensor_range_meter * 100, std**2)"
    ]
   },
   {
